--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1020;
+  z-index: 10;
   pointer-events: all;
 }
 
